Replaces usage of deprecated method calls with more modern alternatives
Signed-off-by: Otavio R. Piske <angusyoung@gmail.com>