@@ -332,7 +332,7 @@ public class ClientComms {
 				conbg.start();
 			} else {
 				// @TRACE 207=connect failed: not disconnected {0}
-				log.fine(CLASS_NAME, methodName, "207", new Object[] { new Byte(conState) });
+				log.fine(CLASS_NAME, methodName, "207", new Object[] { Byte.valueOf(conState) });
 				if (isClosed() || closePending) {
 					throw new MqttException(MqttClientException.REASON_CODE_CLIENT_CLOSED);
 				} else if (isConnecting()) {
@@ -361,7 +361,7 @@ public class ClientComms {
 		}
 
 		// @TRACE 204=connect failed: rc={0}
-		log.fine(CLASS_NAME, methodName, "204", new Object[] { new Integer(rc) });
+		log.fine(CLASS_NAME, methodName, "204", new Object[] { Integer.valueOf(rc) });
 		throw mex;
 	}
 
@@ -724,10 +724,10 @@ public class ClientComms {
 
 	public Properties getDebug() {
 		Properties props = new Properties();
-		props.put("conState", new Integer(conState));
+		props.put("conState", Integer.valueOf(conState));
 		props.put("serverURI", getClient().getServerURI());
 		props.put("callback", callback);
-		props.put("stoppingComms", new Boolean(stoppingComms));
+		props.put("stoppingComms", Boolean.valueOf(stoppingComms));
 		return props;
 	}
 
